fix: img responsiveness on small viewports

--- a/src/stylesheets/view-specific/talkboard.scss
+++ b/src/stylesheets/view-specific/talkboard.scss
@@ -70,6 +70,7 @@
           gap: 10px;
           .img-container {
             width: 30px;
+            min-width: 30px;
             height: 30px;
             img {
               object-fit: cover;
